[project]
name = "knit-mcp"
version = "0.1.0"
description = "MCP demo with FastAPI and Python MCP SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pytest",
  "httpx",
  "requests",
  "mcp[cli]",
]

[tool.pytest.ini_options]
addopts = "-q"
